1.Added rogue in battle scene

--- a/The_Beginning_of_the_End.vcxproj
+++ b/The_Beginning_of_the_End.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Rogue.cpp" />
+    <ClCompile Include="Sword.cpp" />
     <ClCompile Include="The_Beginning_of_the_End.cpp" />
     <ClCompile Include="Warrior.cpp" />
     <ClCompile Include="Wizard.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rogue.h" />
+    <ClInclude Include="Sword.h" />
     <ClInclude Include="Warrior.h" />
     <ClInclude Include="Wizard.h" />
   </ItemGroup>
