1. The scene after the fight was added. 2. The quest scene has been improved. 3.Arrows have been changed to knives for the rogue.

--- a/The_Beginning_of_the_End.vcxproj.filters
+++ b/The_Beginning_of_the_End.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="Griffon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameInfoEndOfTheFight.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AllAdditionalAndLibraries.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Griffon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameInfoEndOfTheFight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
