--- a/The_Beginning_of_the_End.vcxproj
+++ b/The_Beginning_of_the_End.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameInfoBattleScene.cpp" />
     <ClCompile Include="GameInfoChoose.cpp" />
+    <ClCompile Include="GameInfoEndOfTheFight.cpp" />
     <ClCompile Include="GameInfoIntroBattle.cpp" />
     <ClCompile Include="GameIntroInfo.cpp" />
     <ClCompile Include="Ghoul.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameInfoBattleScene.h" />
     <ClInclude Include="GameInfoChoose.h" />
+    <ClInclude Include="GameInfoEndOfTheFight.h" />
     <ClInclude Include="GameInfoIntroBattle.h" />
     <ClInclude Include="GameIntroInfo.h" />
     <ClInclude Include="Ghoul.h" />
